# git-health

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
contract/: git_health.py
contract/tests/: README.md  __init__.py  conftest.py  test_analyze_repo.py  test_edge_cases.py  test_get_score.py  test_score_bounds.py  test_trust_signals.py  test_v020_api_behavior.py
frontend/: .env.example  README.md
frontend/src/: constants.js
frontend/src/components/: HistoryList.jsx
githealth-app/: index.html  package-lock.json
githealth-app/src/: App.jsx  constants.js
githealth-app/src/components/: RepoInput.jsx  ScoreGauge.jsx
githealth-app/src/hooks/: useWallet.js
src/: App.jsx  constants.js  index.css
src/components/: RepoInput.jsx  ScoreGauge.jsx  WalletBar.jsx
src/hooks/: useWallet.js
src/lib/: genLayerClient.js
